[package]
name = "quadtree"
version = "0.1.0"
edition = "2018"
description = """
A Rust Quadtree implementation.
"""
authors = ["Nycholas de Oliveira e Oliveira <nycholas@gmail.com>"]
readme = "README.md"
repository = "https://github.com/nycholas/rs-quadtree"
license = "BSD-3-Clause"
keywords = ["quadtree", "algorithms"]
categories = ["algorithms"]

[dependencies]
